who is this strange man, how does he do it?

--- a/localization/english/fodlan_traits_l_english.yml
+++ b/localization/english/fodlan_traits_l_english.yml
@@ -51,91 +51,91 @@
  trait_crest_major_indech:0 "Major Crest of Indech"
  trait_crest_major_indech_desc:0 "This character bears the Major [crest|E] of [Concept('indech','Indech')|E]."
  trait_crest_blood_indech:0 "Blood of Indech"
- trait_crest_blood_indech_desc:0 "This character has the reclusive blood of indech in their veins, one of the [Concept('saints','Four Saints')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_indech_desc:0 "This character has the reclusive blood of [Concept('indech','Indech')|E] in their veins, one of the [Concept('saints','Four Saints')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_cichol:0 "Minor Crest of Cichol"
  trait_crest_minor_cichol_desc:0 "This character bears the Minor [crest|E] of [Concept('cichol','Cichol')|E]."
  trait_crest_major_cichol:0 "Major Crest of Cichol"
  trait_crest_major_cichol_desc:0 "This character bears the Major [crest|E] of [Concept('cichol','Cichol')|E]."
  trait_crest_blood_cichol:0 "Blood of Cichol"
- trait_crest_blood_cichol_desc:0 "This character has the striking blood of cichol in their veins, one of the [Concept('saints','Four Saints')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_cichol_desc:0 "This character has the striking blood of [Concept('cichol','Cichol')|E] in their veins, one of the [Concept('saints','Four Saints')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_cethleann:0 "Minor Crest of Cethleann"
  trait_crest_minor_cethleann_desc:0 "This character bears the Minor [crest|E] of [Concept('cethleann','Cethleann')|E]."
  trait_crest_major_cethleann:0 "Major Crest of Cethleann"
  trait_crest_major_cethleann_desc:0 "This character bears the Major [crest|E] of [Concept('cethleann','Cethleann')|E]."
  trait_crest_blood_cethleann:0 "Blood of Cethleann"
- trait_crest_blood_cethleann_desc:0 "This character has the blessed blood of Cethleann in their veins, one of the [Concept('saints','Four Saints')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_cethleann_desc:0 "This character has the blessed blood of [Concept('cethleann','Cethleann')|E] in their veins, one of the [Concept('saints','Four Saints')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_riegan:0 "Minor Crest of Riegan"
  trait_crest_minor_riegan_desc:0 "This character bears the Minor [crest|E] of [Concept('ten_elites','Riegan')|E]."
  trait_crest_major_riegan:0 "Major Crest of Riegan"
  trait_crest_major_riegan_desc:0 "This character bears the Major [crest|E] of [Concept('ten_elites','Riegan')|E]."
  trait_crest_blood_riegan:0 "Blood of Riegan"
- trait_crest_blood_riegan_desc:0 "This character has the determined blood of Riegan in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_riegan_desc:0 "This character has the determined blood of [Concept('ten_elites','Riegan')|E] in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_lamine:0 "Minor Crest of Lamine"
  trait_crest_minor_lamine_desc:0 "This character bears the Minor [crest|E] of [Concept('ten_elites','Lamine')|E]."
  trait_crest_major_lamine:0 "Major Crest of Lamine"
  trait_crest_major_lamine_desc:0 "This character bears the Major [crest|E] of [Concept('ten_elites','Lamine')|E]."
  trait_crest_blood_lamine:0 "Blood of Lamine"
- trait_crest_blood_lamine_desc:0 "This character has the protective blood of Lamine in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_lamine_desc:0 "This character has the protective blood of [Concept('ten_elites','Lamine')|E] in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_goneril:0 "Minor Crest of Goneril"
  trait_crest_minor_goneril_desc:0 "This character bears the Minor [crest|E] of [Concept('ten_elites','Goneril')|E]."
  trait_crest_major_goneril:0 "Major Crest of Goneril"
  trait_crest_major_goneril_desc:0 "This character bears the Major [crest|E] of [Concept('ten_elites','Goneril')|E]."
  trait_crest_blood_goneril:0 "Blood of Goneril"
- trait_crest_blood_goneril_desc:0 "This character has the mighty blood of Goneril in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_goneril_desc:0 "This character has the mighty blood of [Concept('ten_elites','Goneril')|E] in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_gloucester:0 "Minor Crest of Gloucester"
  trait_crest_minor_gloucester_desc:0 "This character bears the Minor [crest|E] of [Concept('ten_elites','Gloucester')|E]."
  trait_crest_major_gloucester:0 "Major Crest of Gloucester"
  trait_crest_major_gloucester_desc:0 "This character bears the Major [crest|E] of [Concept('ten_elites','Gloucester')|E]."
  trait_crest_blood_gloucester:0 "Blood of Gloucester"
- trait_crest_blood_gloucester_desc:0 "This character has the proud blood of Gloucester in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_gloucester_desc:0 "This character has the proud blood of [Concept('ten_elites','Gloucester')|E] in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_gautier:0 "Minor Crest of Gautier"
  trait_crest_minor_gautier_desc:0 "This character bears the Minor [crest|E] of [Concept('ten_elites','Gautier')|E]."
  trait_crest_major_gautier:0 "Major Crest of Gautier"
  trait_crest_major_gautier_desc:0 "This character bears the Major [crest|E] of [Concept('ten_elites','Gautier')|E]."
  trait_crest_blood_gautier:0 "Blood of Gautier"
- trait_crest_blood_gautier_desc:0 "This character has the ruining blood of Gautier in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_gautier_desc:0 "This character has the ruining blood of [Concept('ten_elites','Gautier')|E] in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_fraldarius:0 "Minor Crest of Fraldarius"
  trait_crest_minor_fraldarius_desc:0 "This character bears the Minor [crest|E] of [Concept('ten_elites','Fraldarius')|E]."
  trait_crest_major_fraldarius:0 "Major Crest of Fraldarius"
  trait_crest_major_fraldarius_desc:0 "This character bears the Major [crest|E] of [Concept('ten_elites','Fraldarius')|E]."
  trait_crest_blood_fraldarius:0 "Blood of Fraldarius"
- trait_crest_blood_fraldarius_desc:0 "This character has the lethal blood of Fraldarius in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_fraldarius_desc:0 "This character has the lethal blood of [Concept('ten_elites','Fraldarius')|E] in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_dominic:0 "Minor Crest of Dominic"
  trait_crest_minor_dominic_desc:0 "This character bears the Minor [crest|E] of [Concept('ten_elites','Dominic')|E]."
  trait_crest_major_dominic:0 "Major Crest of Dominic"
  trait_crest_major_dominic_desc:0 "This character bears the Major [crest|E] of [Concept('ten_elites','Dominic')|E]."
  trait_crest_blood_dominic:0 "Blood of Dominic"
- trait_crest_blood_dominic_desc:0 "This character has the crushing blood of Dominic in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_dominic_desc:0 "This character has the crushing blood of [Concept('ten_elites','Dominic')|E] in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_daphnel:0 "Minor Crest of Daphnel"
  trait_crest_minor_daphnel_desc:0 "This character bears the Minor [crest|E] of [Concept('ten_elites','Daphnel')|E]."
  trait_crest_major_daphnel:0 "Major Crest of Daphnel"
  trait_crest_major_daphnel_desc:0 "This character bears the Major [crest|E] of [Concept('ten_elites','Daphnel')|E]."
  trait_crest_blood_daphnel:0 "Blood of Daphnel"
- trait_crest_blood_daphnel_desc:0 "This character has the heroic blood of Daphnel in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_daphnel_desc:0 "This character has the heroic blood of [Concept('ten_elites','Daphnel')|E] in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_charon:0 "Minor Crest of Charon"
  trait_crest_minor_charon_desc:0 "This character bears the Minor [crest|E] of [Concept('ten_elites','Charon')|E]."
  trait_crest_major_charon:0 "Major Crest of Charon"
  trait_crest_major_charon_desc:0 "This character bears the Major [crest|E] of [Concept('ten_elites','Charon')|E]."
  trait_crest_blood_charon:0 "Blood of Charon"
- trait_crest_blood_charon_desc:0 "This character has the thundering blood of Charon in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_charon_desc:0 "This character has the thundering blood of [Concept('ten_elites','Charon')|E] in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_blaiddyd:0 "Minor Crest of Blaiddyd"
  trait_crest_minor_blaiddyd_desc:0 "This character bears the Minor [crest|E] of [Concept('ten_elites','Blaiddyd')|E]."
  trait_crest_major_blaiddyd:0 "Major Crest of Blaiddyd"
  trait_crest_major_blaiddyd_desc:0 "This character bears the Major [crest|E] of [Concept('ten_elites','Blaiddyd')|E]."
  trait_crest_blood_blaiddyd:0 "Blood of Blaiddyd"
- trait_crest_blood_blaiddyd_desc:0 "This character has the roaring blood of Blaiddyd in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
+ trait_crest_blood_blaiddyd_desc:0 "This character has the roaring blood of [Concept('ten_elites','Blaiddyd')|E] in their veins, one of the [Concept('ten_elites','Ten Elites')|E], but it does not manifest as a [Concept('crest','Crest')|E]."
 
  trait_crest_minor_aubin:0 "Minor Crest of Aubin"
  trait_crest_minor_aubin_desc:0 "This character bears the Minor [crest|E] of [Concept('aubin','Aubin')|E]."
@@ -241,7 +241,7 @@
  game_concept_seiros_desc:0 "The leader of the other [Concept('saints','Four Saints')|E] in the fight against the traitorous [Concept('ten_elites','Ten Elites')|E] and founder of the Church of Seiros. A renowned warrior known for extreme compassion and charitability."
  
  game_concept_macuil:0 "Macuil"
- game_concept_macuil_desc:0 "The famously reclusive Saint of the [Concept('saints','Four Saints')|E]. Fabled as a craftsman and a strategist of great talent, he was also known for crafting works without peer. His bloodline persists in many noble houses to this day."
+ game_concept_macuil_desc:0 "The famously reclusive Saint of the [Concept('saints','Four Saints')|E]. Fabled as a craftsman and a strategist of great talent, he was also known for crafting works without peer. His bloodline persists in some noble houses to this day."
  
  game_concept_indech:0 "Indech"
  game_concept_indech_desc:0 "One of the [Concept('saints','Four Saints')|E], said to be an indomitable warrior. Noted to be very shy, a trait shared by his descendents. His bloodline persists in many noble houses to this day."
@@ -249,11 +249,14 @@
  game_concept_cichol:0 "Cichol"
  game_concept_cichol_desc:0 "One of the [Concept('saints','Four Saints')|E]. Notably diligent and wise, he was often sought after for counsel by Saint Seiros. His bloodline persists in many noble houses to this day."
  
+ game_concept_cethleann:0 "Cethleann"
+ game_concept_cethleann_desc:0 "One of the [Concept('saints','Four Saints')|E]. Known for extreme shows of kindness and innocence, with a great disdain for war. Her bloodline persists in some noble houses to this day."
+ 
  game_concept_noa:0 "Noa"
- game_concept_noa_desc:0 "One of the [Concept('four_apostles','Four Apostles')|E]. The founder of House Nuvelle."
+ game_concept_noa_desc:0 "One of the [Concept('four_apostles','Four Apostles')|E]. Disappeared in western Adrestia."
  
  game_concept_timotheos:0 "Timotheos"
- game_concept_timotheos_desc:0 "One of the [Concept('four_apostles','Four Apostles')|E]. Disappeared somewhere in Adrestia, eventually founding a village." 
+ game_concept_timotheos_desc:0 "One of the [Concept('four_apostles','Four Apostles')|E]. Disappeared somewhere in Adrestia, never to be seen again." 
  
  game_concept_chevalier:0 "Chevalier"
  game_concept_chevalier_desc:0 "One of the [Concept('four_apostles','Four Apostles')|E]. Vanished into the mountains at Fodlan's Throat, and eventually founded the village of Kupala." 
