special builds finished

--- a/localization/english/fodlan_super_duper_buildings_l_english.yml
+++ b/localization/english/fodlan_super_duper_buildings_l_english.yml
@@ -17,4 +17,24 @@
  building_fodlans_locket_01:0 "Fodlan's Locket"
  building_type_fodlans_locket_01:0 "Fortress"
  building_fodlans_locket_01_desc:0 "Dividing Fodlan from Almyra sits Fodlan's Throat. Fodlan's Locket is the great fortress built at the heart of these mountains. It was built to stand strong against Almyran invaders, something it has done without fail for many years."
- 
+ building_myrddin_bridge_01:0 "Bridge of Myrddin"
+ building_type_myrddin_bridge_01:0 "Fortress"
+ building_myrddin_bridge_01_desc:0 "The Bridge of Myrddin is one of the bridges that connects the two sides of the Airmid river. It differs from the other bridges in its formidable size, capable of allowing even an army to pass. Consequentially, its fortifications are not meager, thereby making it an important fortress to hold."
+ building_arianhrod_01:0 "Fort Arianhrod"
+ building_type_arianhrod_01:0 "Fortress"
+ building_arianhrod_01_desc:0 "Fort Arianhrod, also known as the Silver Maiden, is a fortress city that was originally constructed by the Empire in the domain of House Rowe. It was intended to ward against the burgeoning Holy Kingdom of Faerghus, for the nation had just gained indepedence from the Empire. When it was completed, House Rowe defected to Faerghus, and the Silver Maiden has since remained in Faerghus."
+ building_merceus_01:0 "Fort Merceus"
+ building_type_merceus_01:0 "Fortress"
+ building_merceus_01_desc:0 "Known popularly as the Stubborn Old General, Fort Merceus serves as the seat of House Bergliez. More importantly, the fort is the primary approach to the Imperial Capital of Enbarr. It has a longstanding reputation of being impregnable."
+ building_hevring_mines_01:0 "Mines of Hevring"
+ building_type_hevring_mines_01:0 "Mines"
+ building_hevring_mines_01_desc:0 "Located along the Oghma Mountains, the territory of Hevring prospers because of their mining industry. The tunnels reach deep into the mountains, extracting ore from the rock day by day."
+ building_kupala_mines_01:0 "Mines of Kupala"
+ building_type_kupala_mines_01:0 "Mines"
+ building_kupala_mines_01_desc:0 "The people of Kupala, though secluded, work with precious minerals taken from the mountains in which they reside. The tribesmen craft weapons and armors from these minerals, aiding them in defending against encroaching forces."
+ building_zanado_01:0 "Zanado"
+ building_type_zanado_01:0 "Ruins"
+ building_zanado_01_desc:0 "Zanado, the Red Canyon, is the site of ruins that appear to be centuries old. Buildings of their like cannot be found anywhere in the surrounding lands. Yet despite its psuedonym, nothing within the Red Canyon is red."
+ building_shamballah_01:0 "Shamballah"
+ building_type_shamballah_01:0 "?"
+ building_shamballah_01_desc:0 "It is said Those Who Slither in the Dark make their home in a place called Shamballah."
