migrated game concepts to their own file, rewrote flavor event descriptions per steel's request, fixed a singular typo

--- a/localization/english/fodlan_flavor_l_english.yml
+++ b/localization/english/fodlan_flavor_l_english.yml
@@ -7,11 +7,11 @@
  ran_from_beast_modifier:0 "Ran From a Demonic Beast"
  careful_diet_modifier:0 "Careful Diet"
  FOD_flavor.1.t:0 "Tomato Shortage"
- FOD_flavor.1.desc:0 "Rumors swirl about the [tomato_county.GetName] about a mysterious dark knight who purchased all of the tomatoes in the markets. Surely there is some feast planned somewhere, but no locals have been invited. The commonfolk plead for culinary aid."
+ FOD_flavor.1.desc:0 "I heard ludicrous rumors involving tomatoes in the [tomato_county.GetName], and paid them as little attention as they deserved. Those rumors turned out to be more than just that when the court received a petition from the [tomato_county.GetName]. \n\nA dark knight has supposedly bought all of the tomatoes in the market, though no one can say why. Ridiculous as it sounds, the people of the [tomato_county.GetName] request for aid."
  FOD_flavor.1.a:0 "I suppose I can import tomatoes."
  FOD_flavor.1.b:0 "This is not my problem to solve."
  FOD_flavor.2.t:0 "Teatime"
- FOD_flavor.2.desc:0 "During a teatime with [teamate.GetName], [teamate.GetSheHe] brought up something unexpectedly personal in private conversation. This is a chance to get to know [teamate.GetName] better, but there is a risk of offending [teamate.GetHerHim] instead. How should I respond?"
+ FOD_flavor.2.desc:0 "I invited [teamate.GetName] to have some tea. I think it has gone fairly well, although I had to rack my brain to think of topics [teamate.GetSheHe] would enjoy discussing. \n\nAs we neared the end of the teapot and in turn our private conversation, [teamate.GetName] brought up something surprisingly personal. I could feel the weight behind [teamate.GetHerHis] words, and it's clear that [teamate.GetSheHe] is waiting for my reaction. \n\nHow do I respond?"
  FOD_flavor.2.a:0 "Sip tea."
  FOD_flavor.2.b:0 "Nod."
  FOD_flavor.2.c:0 "Laugh."
@@ -20,7 +20,7 @@
  FOD_flavor.2.nice:0 "Nice Teatime!"
  FOD_flavor.2.poor:0 "You don't have much to say to one another..."
  FOD_flavor.3.t:0 "Demonic Beast Attack!"
- FOD_flavor.3.desc:0 "Just as my hunting party crests a hill we hear it. The snapping of twigs, the rustle of branches, birds screaming in fright; they are heralds announcing its arrival. A massive Demonic Beast, heading straight for us."
+ FOD_flavor.3.desc:0 "The hunt has been going poorly. It has been difficult to spot any animals that were not already fleeing. My companions suggested that another hunting party might be in the area and vowed to hunt down these poachers. Even still, the hunting grounds are unusually quiet. \n\nThe air shakes as a deafening and inhuman roar fills the surroundings. We see it then-- a dread black creature with putrid flesh, agape maw dripping with the blood of its most recent kill. Just as we see it, it sees us. I have but a precious few moments to make a decision."
  FOD_flavor.3.a:0 "Face this Demonic Beast alone."
  FOD_flavor.3.a.critical_success:0 "The Demonic Beast is no match for me."
  FOD_flavor.3.a.success:0 "I am injured while slaying the Demonic Beast."
@@ -36,16 +36,16 @@
  FOD_flavor.3.c.failure:0 "We drive off the Demonic Beast, but some are injured."
  FOD_flavor.3.d:0 "Run away."
  FOD_flavor.4.t:0 "Sharing a Meal"
- FOD_flavor.4.desc:0 "I have invited [first_courtier.GetName] and [second_courtier.GetName] to share a private meal. The head chef has prepared a special meal, or I could request a meal that they both like."
+ FOD_flavor.4.desc:0 "I wished to get closer to [first_courtier.GetName] and [second_courtier.GetName], so I invited them to dine with me. The head chef has already prepared a meal for the day, and though it might satisfy my guests, I could order something made specially to ensure that things go well. Both would be satisfied, but it would cost me more than a typical meal."
  FOD_flavor.4.a:0 "Try today's special."
  FOD_flavor.4.b:0 "Request something that everybody likes."
  FOD_flavor.4.good:0 "Bonds among the three of you grew stronger."
  FOD_flavor.5.t:0 "An Edible Plant?"
- FOD_flavor.5.desc:0 "I have found an unusual plant growing in the garden that I believe to be edible. When I told [naysayer.GetName] of my intention to eat it to test my theory, [naysayer.GetSheHe] advised me to be more careful in my diet, for the sake of the realm."
+ FOD_flavor.5.desc:0 "As I strolled through the garden alongside [naysayer.GetName], I spotted an unusual plant with distinct features. I was near certain that I had seen this plant in a book, and that it could be eaten without harm. When I told [naysayer.GetName] of my intention to eat it to test my theory, [naysayer.GetSheHe] advised me to be more careful in my diet, for the sake of the realm. \n\nIt certainly does look a bit harmful, yet looks can be deceiving when it comes to plants."
  FOD_flavor.5.a:0 "Eat it."
  FOD_flavor.5.b:0 "Listen to [naysayer.GetHerHis] advice."
  FOD_flavor.6.t:0 "A Promising Orphan"
- FOD_flavor.6.desc:0 "My [realm_priest.GetCouncilTitle] [realm_priest.GetName] has brought to me a child. Apparently, this [orphan.GetName] is an orphan who has shown great promise, and my [realm_priest.GetCouncilTitle] believes that I may be interested in taking the orphan into my court."
+ FOD_flavor.6.desc:0 "My [realm_priest.GetCouncilTitle] [realm_priest.GetName] often visits a local orphanage when his duty permits it. Of late, he has been singing the praises of a talented young child there. [realm_priest.GetFirstNamePossessive] interest in the child has only grown with time, and now, [realm_priest.GetSheHe] has brought the orphan to court. \n\n[orphan.GetHerHis] name is [orphan.GetName], and my [realm_priest.GetCouncilTitle] promises that [orphan.GetSheHe] will be of great use to me in the future. I can clearly see the child does have something special, but is [orphan.GetSheHe] worth taking in?"
  FOD_flavor.6.a:0 "I will take [orphan.GetName] as my own heir."
  FOD_flavor.6.b:0 "[orphan.GetName] may join my court."
  FOD_flavor.6.c:0 "I have a realm to rule. Send [orphan.GetHerHim] back to the orphanage."
