--- a/localization/english/fodlan_super_duper_buildings_l_english.yml
+++ b/localization/english/fodlan_super_duper_buildings_l_english.yml
@@ -34,7 +34,7 @@
  building_kupala_mines_01_desc:0 "The people of Kupala, though secluded, work with precious minerals taken from the mountains in which they reside. The tribesmen craft weapons and armors from these minerals, aiding them in defending against encroaching forces."
  building_zanado_01:0 "Zanado"
  building_type_zanado_01:0 "Ruins"
- building_zanado_01_desc:0 "Zanado, the Red Canyon, is the site of ruins that appear to be centuries old. Buildings of their like cannot be found anywhere in the surrounding lands. Yet despite its psuedonym, nothing within the Red Canyon is red."
+ building_zanado_01_desc:0 "Zanado, the Red Canyon, is the site of ruins that appear to be centuries old. Buildings of their like cannot be found anywhere in the surrounding lands. Despite its psuedonym, nothing within the Red Canyon is red."
  building_shamballah_01:0 "Shamballah"
  building_type_shamballah_01:0 "?"
  building_shamballah_01_desc:0 "It is said Those Who Slither in the Dark make their home in a place called Shamballah."
