fixed localization for some titles

--- a/localization/english/fodlan_flavor_l_english.yml
+++ b/localization/english/fodlan_flavor_l_english.yml
@@ -20,7 +20,7 @@
  FOD_flavor.2.nice:0 "Nice Teatime!"
  FOD_flavor.2.poor:0 "You don't have much to say to one another..."
  FOD_flavor.3.t:0 "Demonic Beast Attack!"
- FOD_flavor.3.desc:0 "The hunt has been going poorly. It has been difficult to spot any animals that were not already fleeing. My companions suggested that another hunting party might be in the area and vowed to hunt down these poachers. Even still, the hunting grounds are unusually quiet. \n\nThe air shakes as a deafening and inhuman roar fills the surroundings. We see it then-- a dread black creature with putrid flesh, agape maw dripping with the blood of its most recent kill. Just as we see it, it sees us. I have but a precious few moments to make a decision."
+ FOD_flavor.3.desc:0 "The hunt has been going poorly. The few animals we see are already fleeing from something. My companions suggested that another hunting party might be in the area, and they vowed to hunt down these poachers. Even still, the hunting grounds are unusually quiet. \n\nThe air shakes as a deafening and inhuman roar fills the surroundings. We see it then-- a dread black creature with putrid flesh, agape maw dripping with the blood of its most recent kill. Just as we see it, it sees us. I have but a precious few moments to make a decision."
  FOD_flavor.3.a:0 "Face this Demonic Beast alone."
  FOD_flavor.3.a.critical_success:0 "The Demonic Beast is no match for me."
  FOD_flavor.3.a.success:0 "I am injured while slaying the Demonic Beast."
@@ -45,7 +45,7 @@
  FOD_flavor.5.a:0 "Eat it."
  FOD_flavor.5.b:0 "Listen to [naysayer.GetHerHis] advice."
  FOD_flavor.6.t:0 "A Promising Orphan"
- FOD_flavor.6.desc:0 "My [realm_priest.GetCouncilTitle] [realm_priest.GetName] often visits a local orphanage when his duty permits it. Of late, he has been singing the praises of a talented young child there. [realm_priest.GetFirstNamePossessive] interest in the child has only grown with time, and now, [realm_priest.GetSheHe] has brought the orphan to court. \n\n[orphan.GetHerHis] name is [orphan.GetName], and my [realm_priest.GetCouncilTitle] promises that [orphan.GetSheHe] will be of great use to me in the future. I can clearly see the child does have something special, but is [orphan.GetSheHe] worth taking in?"
+ FOD_flavor.6.desc:0 "My [realm_priest.GetCouncilTitle] [realm_priest.GetName] often visits a local orphanage when his duty permits it. Of late, he has been singing the praises of a talented young child there. [realm_priest.GetFirstNamePossessive] interest in the child has only grown with time, and now, [realm_priest.GetSheHe] has brought the orphan to court. \n\nThe orphan's name is [orphan.GetName], and my [realm_priest.GetCouncilTitle] promises that [orphan.GetSheHe] will be of great use to me in the future. I can clearly see the child does have something special, but is [orphan.GetSheHe] worth taking in?"
  FOD_flavor.6.a:0 "I will take [orphan.GetName] as my own heir."
  FOD_flavor.6.b:0 "[orphan.GetName] may join my court."
  FOD_flavor.6.c:0 "I have a realm to rule. Send [orphan.GetHerHim] back to the orphanage."
